--- a/website/client/templates/applicatoin/layout.html
+++ b/website/client/templates/applicatoin/layout.html
@@ -1,6 +1,6 @@
 <template name="layout">
   <div class="container">
-      {{> drillDownDemo}}
+      {{> btccChart}}
       {{> header}}
       {{> errors}}
       <div id="main">
