add time formatter

--- a/website/client/templates/btcc/btcc_item.html
+++ b/website/client/templates/btcc/btcc_item.html
@@ -1,6 +1,6 @@
 <template name="btccItem">
     <tr>
-        <td>{{date}}</td>
+        <td>{{formatDate date}}</td>
         <td>{{sell}}</td>
         <td>{{buy}}</td>
         <td>{{last}}</td>
