--- a/website/client/templates/chart/btcc_chart.html
+++ b/website/client/templates/chart/btcc_chart.html
@@ -1,4 +1,4 @@
 <template name="btccChart">
-    <h2>BTCC Chart</h2>
+    <h2>Day Chart</h2>
     <div id="container-area" style="min-width: 310px; height: 400px;"></div>
 </template>
