--- a/website/client/templates/includes/header.html
+++ b/website/client/templates/includes/header.html
@@ -1,20 +1,27 @@
 <template name="header">
     <nav class="navbar navbar-primary" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{pathFor 'home'}}">BitInfo</a>
-        </div>
+        <!--<div class="navbar-header">-->
+            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">-->
+                <!--<span class="sr-only">Toggle navigation</span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+            <!--</button>-->
+            <!--<a class="navbar-brand" href="{{pathFor 'home'}}">BitInfo</a>-->
+        <!--</div>-->
         <div class="collapse navbar-collapse" id="navigation">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="{{pathFor 'home'}}">Home</a>
+            <ul class="nav nav-tabs nav-justified">
+                <li class="{{hourTab}}">
+                    <a href="{{pathFor 'hour'}}">Hour</a>
+                </li>
+                <li class="{{dayTab}}">
+                    <a href="{{pathFor 'day'}}">Day</a>
+                </li>
+                <li class="{{weekTab}}">
+                    <a href="{{pathFor 'week'}}">Week</a>
                 </li>
             </ul>
         </div>
     </nav>
 </template>
+
