1. add website for showing data 2. add new data table for selling price

--- a/website/client/templates/btcc/btcc_item.html
+++ b/website/client/templates/btcc/btcc_item.html
@@ -3,12 +3,12 @@
         <td>{{formatDate date}}</td>
         <td>{{sell}}</td>
         <td>{{buy}}</td>
-        <td>{{last}}</td>
+        <!--<td>{{last}}</td>-->
         <td>{{vol}}</td>
-        <td>{{prev_close}}</td>
-        <td>{{vwap}}</td>
-        <td>{{high}}</td>
-        <td>{{low}}</td>
-        <td>{{open}}</td>
+        <!--<td>{{prev_close}}</td>-->
+        <!--<td>{{vwap}}</td>-->
+        <!--<td>{{high}}</td>-->
+        <!--<td>{{low}}</td>-->
+        <!--<td>{{open}}</td>-->
     </tr>
 </template>
