--- a/website/client/templates/chart/price_chart.html
+++ b/website/client/templates/chart/price_chart.html
@@ -1,4 +1,4 @@
-<template name="day">
+<template name="priceChart">
     <h2>Day Chart</h2>
     <div id="container-area" style="min-width: 310px; height: 600px;"></div>
 </template>
