--- a/website/client/templates/btcc/btcc_list.html
+++ b/website/client/templates/btcc/btcc_list.html
@@ -2,27 +2,60 @@
     <div class="btcc page">
         <div class="panel panel-primary">
             <div class="panel-heading">BTCC List</div>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Sell</th>
-                    <th>Buy</th>
-                    <th>Last</th>
-                    <th>Vol</th>
-                    <th>Prev_close</th>
-                    <th>VWAP</th>
-                    <th>High</th>
-                    <th>Low</th>
-                    <th>Open</th>
-                </tr>
-                </thead>
-                <tbody>
-                {{#each btcc}}
-                    {{> btccItem}}
-                {{/each}}
-                </tbody>
-            </table>
+            <div class="containder">
+                <div class="col-md-6">
+                    <p>Btcc</p>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Sell</th>
+                            <th>Buy</th>
+                            <!--<th>Last</th>-->
+                            <th>Vol</th>
+                            <!--<th>Prev_close</th>-->
+                            <!--<th>VWAP</th>-->
+                            <!--<th>High</th>-->
+                            <!--<th>Low</th>-->
+                            <!--<th>Open</th>-->
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {{#each btcc}}
+                            {{> btccItem}}
+                        {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="col-md-6">
+                    <p>Huobi</p>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Sell</th>
+                            <th>Buy</th>
+                            <!--<th>Last</th>-->
+                            <th>Vol</th>
+                            <!--<th>Prev_close</th>-->
+                            <!--<th>VWAP</th>-->
+                            <!--<th>High</th>-->
+                            <!--<th>Low</th>-->
+                            <!--<th>Open</th>-->
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {{#each huobi}}
+                            {{> btccItem}}
+                        {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+
+
+
+            </div>
         </div>
     </div>
 </template>
