--- a/website/client/templates/tabs/day.html
+++ b/website/client/templates/tabs/day.html
@@ -1,4 +1,4 @@
 <template name="day">
     <h2>Day Chart</h2>
-    <div id="container-area" style="min-width: 310px; height: 600px;"></div>
+    <canvas id="myChart"></canvas>
 </template>
