--- a/website/client/templates/tabs/hour.html
+++ b/website/client/templates/tabs/hour.html
@@ -1,41 +1,3 @@
 <template name="hour">
-    <div id="container-area" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-    <table id="datatable">
-        <tr>
-            <th>BTCC</th>
-        </tr>
-        <!--{{#each btccData}}-->
-            <!--{{> dataItem}}-->
-        <!--{{/each}}-->
-        <tr>
-            <td>
-                12
-            </td>
-        </tr>
-        <tr>
-            <td>
-                14
-            </td>
-        </tr>
-        <tr>
-            <td>
-                19
-            </td>
-        </tr>
-        <tr>
-            <td>
-                12
-            </td>
-        </tr>
-        <tr>
-            <td>
-                14
-            </td>
-        </tr>
-        <tr>
-            <td>
-                20
-            </td>
-        </tr>
-    </table>
+    <canvas id="myChart"></canvas>
 </template>
