add pagination for hour

--- a/website/client/templates/tabs/day.html
+++ b/website/client/templates/tabs/day.html
@@ -1,4 +1,3 @@
 <template name="day">
-    <h2>Day Chart</h2>
-    <canvas id="myChart"></canvas>
+    <div id="price-area" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 </template>
