update pagination for hour view

--- a/website/client/templates/tabs/hour.html
+++ b/website/client/templates/tabs/hour.html
@@ -1,8 +1,8 @@
 <template name="hour">
     <div class="btn-group pull-right" role="group">
-        <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-chevron-left"></i></button>
-        <button type="button" class="btn btn-default">Now</button>
-        <button type="button" class="btn btn-default"><i class="glyphicon glyphicon-chevron-right"></i></button>
+        <button type="button" id="previous" class="btn btn-default"><i class="glyphicon glyphicon-chevron-left"></i></button>
+        <button type="button" id="now" class="btn btn-default">Now</button>
+        <button type="button" id="after" class="btn btn-default"><i class="glyphicon glyphicon-chevron-right"></i></button>
     </div>
     <div id="price-area" style="min-width: 310px; height: 600px; margin: 0 auto"></div>
 </template>
